<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <Button
            style="@style/NineBoxContainer"
            android:id="@+id/key_1"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/key_1"
            />

        <Button
            android:id="@+id/key_2"
            style="@style/NineBoxContainer"
            android:layout_toRightOf="@id/key_1"
            android:layout_alignTop="@id/key_1"
            android:layout_alignBottom="@id/key_1"
            android:text="@string/key_2"
            android:layout_toStartOf="@+id/key_6" />

        <Button
            android:id="@+id/key_3"
            style="@style/NineBoxContainer"
            android:layout_toRightOf="@id/key_2"
            android:layout_alignTop="@id/key_1"
            android:layout_alignBottom="@id/key_1"
            android:text="@string/key_3"/>


        <Button
            android:id="@+id/key_4"
            style="@style/NineBoxContainer"
            android:layout_below="@id/key_1"
            android:layout_alignLeft="@id/key_1"
            android:layout_alignRight="@id/key_1"
            android:text="@string/key_4"/>

        <Button
            android:id="@+id/key_5"
            style="@style/NineBoxContainer"
            android:layout_toRightOf="@id/key_4"
            android:layout_alignTop="@id/key_4"
            android:layout_alignBottom="@id/key_4"
            android:text="@string/key_5"/>

        <Button
            android:id="@+id/key_6"
            style="@style/NineBoxContainer"
            android:layout_toRightOf="@id/key_5"
            android:layout_alignTop="@id/key_4"
            android:layout_alignBottom="@id/key_4"
            android:text="@string/key_6"/>

        <Button
            android:id="@+id/key_7"
            style="@style/NineBoxContainer"
            android:nextFocusDown="@+id/key_clear"
            android:layout_below="@id/key_4"
            android:layout_alignLeft="@id/key_4"
            android:layout_alignRight="@id/key_4"
            android:text="@string/key_7"/>

        <Button
            android:id="@+id/key_8"
            style="@style/NineBoxContainer"
            android:nextFocusDown="@+id/key_0"
            android:layout_toRightOf="@id/key_7"
            android:layout_alignTop="@id/key_7"
            android:layout_alignBottom="@id/key_7"
            android:text="@string/key_8"/>

        <Button
            android:id="@+id/key_9"
            style="@style/NineBoxContainer"
            android:nextFocusDown="@+id/key_back"
            android:layout_toRightOf="@id/key_8"
            android:layout_alignTop="@id/key_7"
            android:layout_alignBottom="@id/key_7"
            android:text="@string/key_9"/>


        <Button
            android:id="@+id/key_clear"
            style="@style/NineBoxContainer"
            android:drawableTop="@drawable/key_clear"
            android:drawablePadding="0dp"
            android:paddingTop="25dp"
            android:paddingBottom="15dp"
            android:layout_below="@id/key_7"
            android:layout_alignLeft="@id/key_7"
            android:layout_alignRight="@id/key_7"
            android:text="@string/key_clear"/>


        <Button
            android:id="@+id/key_0"
            style="@style/NineBoxContainer"
            android:layout_toRightOf="@id/key_clear"
            android:layout_alignTop="@id/key_clear"
            android:layout_alignBottom="@id/key_clear"
            android:text="@string/key_0"/>


        <Button
            android:id="@+id/key_back"
            style="@style/NineBoxContainer"
            android:drawableTop="@drawable/key_back"
            android:drawablePadding="0dp"
            android:paddingTop="25dp"
            android:paddingBottom="15dp"
            android:layout_toRightOf="@id/key_0"
            android:layout_toEndOf="@id/key_0"
            android:layout_alignTop="@id/key_clear"
            android:layout_alignBottom="@id/key_clear"
            android:text="@string/key_back"/>


</RelativeLayout>
